# de_zoomcamp_2023

week_1/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
week_1/homework/: readme.md
week_1/notebooks/: Green Taxi Data Exploration.ipynb  Taxi Zone data.ipynb  upload-data.ipynb
week_1/pipeline/: Dockerfile  main.py  upload-data.py  upload_data.py
week_1/terraform/: main.tf  provider.tf  readme.md  variables.tf
week_1/terraform/.bootstrap/: .terraform.lock.hcl  main.tf  readme.md
week_2/: .gitignore  docker-compose.yml  readme.md
week_2/application/: Dockerfile  docker-compose.yml  etl_parent_flow-deployment.yaml  pyproject.toml  readme.md
week_2/application/etl_project/: config.py  flows.py  main.py  pipelines.py  tasks.py
week_2/application/pipeline/: flows.py  pipelines.py
week_2/application/schema/: yellow_tripdata_2021-03.json
week_2/application/tests/: pytest.ini  test_pipeline.py
week_2/homework/: readme.md
week_2/terraform/: main.tf  outputs.tf  provider.tf  yellow_tripdata_2021-01.json
week_3/application/: .gitignore  pyproject.toml  readme.md
week_3/application/etl/: main.py  web_to_gcs_etl.py
week_3/application/pipeline/: main.py
week_3/application/tests/: test_web_to_gcs_etl.py
week_3/homework/: readme.md
week_3/terraform/: main.tf  provider.tf
week_4/: .gitignore
week_4/application/: README.md  pyproject.toml
week_4/application/dbt/de_zoomcamp_taxi_dbt/: README.md  dbt_project.yml
week_4/application/dbt/de_zoomcamp_taxi_dbt/macros/: get_payment_type_descriptions.sql
week_4/application/dbt/de_zoomcamp_taxi_dbt/models/core/: dim_zones.sql  dm_monthly_zone_revenue.sql  fact_fhv_trips.sql  fact_trips.sql  schema.yml
week_4/application/dbt/de_zoomcamp_taxi_dbt/models/staging/: green_trip_data.sql  schema.yml  stage_fhv_trip_data.sql  stage_green_trip_data.sql  stage_yellow_trip_data.sql  yellow_trip_data.sql
week_4/application/etl/: main.py
week_4/application/notebooks/: Untitled.ipynb
week_4/homework/: readme.md
week_4/terraform/: main.tf  provider.tf
week_5/: readme.md
week_5/application/: .gitignore
week_5/application/spark_app/: pyproject.toml
week_5/application/spark_app/etl/: main.py
week_5/application/spark_app/notebooks/: FVHV Trip Data.ipynb  High Volume For-Hire Vehicle Trip Records.ipynb  Spark SQL.ipynb  Yellow And Green Taxi Data.ipynb
week_5/homework/: readme.md
week_5/infrastructure/: .dockerignore  .gitignore  build.sh  cluster-base.Dockerfile  docker-compose.yml  jupyterlab.Dockerfile  prefect.Dockerfile  readme.md  spark-master.Dockerfile  spark-worker.Dockerfile
week_5/terraform/: locals.tf  main.tf  provider.tf
week_6/: readme.md
week_6/application/: .gitignore  pyproject.toml
week_6/application/kafka_app/: __main__.py  config.py  consumer_json.py  producer_json.py
week_6/application/kafka_app/models/: __init__.py  ride.py
week_6/homework/: readme.md
week_6/infrastructure/: docker-compose.yml  readme.md
week_7/: .gitignore  readme.md
week_7/application/: .gitignore  Dockerfile  README.md  pyproject.toml
week_7/application/dbt_transformation/: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml
week_7/application/dbt_transformation/macros/: get_int.sql  get_latitude.sql  get_longitude.sql
week_7/application/dbt_transformation/models/core/: casualties.sql  crashes.sql  datetimes.sql  descriptions.sql  dim_datetimes.sql  dim_locations.sql  fact_crash_datetimes.sql  fact_crash_descriptions.sql  fact_crash_locations.sql  fact_crash_vehicles.sql  fact_total_crashes_per_vehicle_type.sql  fact_vehicles.sql  locations.sql  schema.yaml  vehicles.sql
week_7/application/dbt_transformation/models/marts/: mart_total_crashes_per_state.sql  mart_total_crashes_per_vehicle_per_state.sql  mart_total_crashes_per_vehicle_type.sql
week_7/application/dbt_transformation/models/staging/: schema.yml  stg_casualties.sql  stg_crashes.sql  stg_descriptions.sql
week_7/application/etl_app/: __main__.py
week_7/application/main/: __main__.py
week_7/infrastructure/docker/: docker-compose.yml  jupyterlab.Dockerfile  prefect.Dockerfile  spark-base.Dockerfile  spark-master.Dockerfile
week_7/infrastructure/terraform/: main.tf  provider.tf  terraform.tfvars  variables.tf
week_7/infrastructure/terraform/data_warehouse/: main.tf  outputs.tf  variables.tf
week_7/infrastructure/terraform/datalake/: main.tf  outputs.tf  variables.tf
week_7/notebooks/: .gitignore  Hello World.ipynb  explore_anz_crash_data.ipynb
