[tool.poetry]
name = "pipeline"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
jupyter = "^1.0.0"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
