[tool.poetry]
name = "de-zoomcamp-week-3"
version = "0.1.0"
description = "Data Engineering Zoom Camp Week 3 work files and homework"
authors = ["vuvuzella <j.tabacii@gmail.com>"]
readme = "README.md"
packages = [{include = "etl_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
jupyter = "^1.0.0"
psycopg2-binary = "^2.9.5"
prefect = "2.7.7"
prefect-gcp = {version = "0.2.4", extras = ["cloud-storage"]}
prefect-sqlalchemy = "0.2.2"
pandas-gbq = "^0.19.1"
protobuf = "^4.21.12"
sqlalchemy = "1.4.46"
pyarrow = "10.0.1"
validators = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
etl = "etl_project.main:main"
